// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Repetition > None or many (*) > should be parsed 1`] = `
{
  "body": {
    "end": 2,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "type": 1,
    },
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > None or many (*) > should correct work with lazy quantifier 1`] = `
{
  "body": {
    "end": 3,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 3,
      "greedy": false,
      "kind": "Quantifier",
      "start": 2,
      "type": 1,
    },
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > None or single (?) > should be parsed 1`] = `
{
  "body": {
    "end": 2,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "type": 0,
    },
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > None or single (?) > should correct work with lazy quantifier 1`] = `
{
  "body": {
    "end": 3,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 3,
      "greedy": false,
      "kind": "Quantifier",
      "start": 2,
      "type": 0,
    },
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > Exact > should parse repetition count 1`] = `
{
  "body": {
    "end": 4,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 4,
      "from": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "to": undefined,
      "type": 3,
    },
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > Exact > should parse unclosed range as chars 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 123,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "{",
      },
      {
        "charCode": 50,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "2",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > Exact > should parse unclosed range as chars 2`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 50,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "2",
      },
      {
        "charCode": 125,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "}",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to exact > should parse repetition count 1`] = `
{
  "body": {
    "end": 6,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 6,
      "from": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "to": 4,
      "type": 3,
    },
    "start": 1,
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to exact > should parse unclosed range as chars 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 123,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "{",
      },
      {
        "charCode": 50,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "2",
      },
      {
        "charCode": 44,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": ",",
      },
      {
        "charCode": 52,
        "end": 5,
        "kind": "Char",
        "start": 5,
        "type": "Simple",
        "value": "4",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to exact > should parse unclosed range as chars 2`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 50,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "2",
      },
      {
        "charCode": 44,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": ",",
      },
      {
        "charCode": 52,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": "4",
      },
      {
        "charCode": 125,
        "end": 5,
        "kind": "Char",
        "start": 5,
        "type": "Simple",
        "value": "}",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to unlimited > should parse repetition count 1`] = `
{
  "body": {
    "end": 5,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 5,
      "from": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "to": Infinity,
      "type": 3,
    },
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to unlimited > should parse unclosed range as chars 1`] = `
{
  "body": {
    "end": 4,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 123,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "{",
      },
      {
        "charCode": 50,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "2",
      },
      {
        "charCode": 44,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": ",",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > From exact to unlimited > should parse unclosed range as chars 2`] = `
{
  "body": {
    "end": 4,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 50,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "2",
      },
      {
        "charCode": 44,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": ",",
      },
      {
        "charCode": 125,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": "}",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Range > should correct work with lazy quantifier 1`] = `
{
  "body": {
    "end": 5,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 5,
      "from": 2,
      "greedy": false,
      "kind": "Quantifier",
      "start": 2,
      "to": undefined,
      "type": 3,
    },
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Single or many (+) > should be parsed 1`] = `
{
  "body": {
    "end": 2,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 2,
      "greedy": true,
      "kind": "Quantifier",
      "start": 2,
      "type": 2,
    },
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Repetition > Single or many (+) > should correct work with lazy quantifier 1`] = `
{
  "body": {
    "end": 3,
    "expression": {
      "charCode": 97,
      "end": 1,
      "kind": "Char",
      "start": 1,
      "type": "Simple",
      "value": "a",
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 3,
      "greedy": false,
      "kind": "Quantifier",
      "start": 2,
      "type": 2,
    },
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
